# nova-lang

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
docs/: CONTRIBUTING.md
docs/examples/: advanced.nova  arrays.nova  built_ins.nova  calculator.nova  classes.nova  collections.nova  conditions.nova  crypto.nova  data_processing.nova  datetime.nova  fibonacci.nova  game_of_life.nova  hello.nova  loops.nova  random.nova  test_lsp.nova  variables.nova  web_scraper.nova
docs/reference/: classes.md  language-spec.md
docs/tutorials/: oop-guide.md
docs/website/: index.html
editor_support/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  PUBLISH.md  PUBLISH_GUIDE.md  QUICK_PUBLISH.md  README.md  SIMPLE_PUBLISH.md  TEST_INSTRUCTIONS.md  TROUBLESHOOTING.md  [Content_Types].xml  debug-extension.js  extension-debug.js  extension-enhanced.js  extension.js  extension.vsixmanifest  language-configuration.json  nova-language-0.1.0.vsix  nova-language-0.2.0.vsix  nova-language-0.3.0.vsix  nova-language-extension-1.1.0.vsix  nova-language-support-1.0.0.vsix  package-lock.json  package.json  simple-extension.js  symbol-test.nova  test-completion.nova  test-minimal.js  test.nova
editor_support/vscode/icons/: nova-icon-theme.json
editor_support/vscode/server/: package-lock.json  package.json  tsconfig.json
editor_support/vscode/server-rust/: Cargo.toml
editor_support/vscode/server-rust/src/: main.rs
editor_support/vscode/server/src/: server.ts
editor_support/vscode/snippets/: nova.json
editor_support/vscode/src/: debug-provider.js  formatter.js  project-scaffolding.js  refactoring.js  symbol-provider.js  syntax-validator.js
editor_support/vscode/syntaxes/: nova.tmLanguage.json
editor_support/vscode/templates/cli-app/: README.md  main.nova
editor_support/vscode/templates/hello-world/: README.md  main.nova
editor_support/vscode/templates/web-app/: README.md  main.nova
editor_support/vscode/themes/: nova-dark.json  nova-light.json
nova/compiler/: Cargo.toml
nova/compiler/src/: ast.rs  diagnostics.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  module.rs  parser.rs  repl.rs  tests.rs  token.rs  value.rs
nova/runtime/: Cargo.toml  gc.rs  lib.rs  memory.rs  native.rs  vm.rs
nova/stdlib/: Cargo.toml  array.nova  array.rs  array_utils.nova  collections.rs  crypto.rs  datetime.rs  http.rs  io.rs  json.rs  lib.rs  math.nova  math.rs  random.rs  string.nova  string.rs  string_utils.nova
nova/testing/: Cargo.toml  assertions.rs  benchmarks.rs  coverage.rs  lib.rs  test_runner.rs
nova/tools/: Cargo.toml  formatter.rs  language_server.rs  lib.rs  linter.rs  repl.rs
test_suite/benchmark/: performance.nova
test_suite/integration/: core_tests.nova  test_runner.nova
test_suite/unit/: README.md  debug_array.nova  debug_assignment.nova  debug_bitwise_not.nova  debug_bitwise_op.nova  debug_bitwise_simple.nova  debug_simple_assignment.nova  math_module.nova  test.nova  test_advanced.nova  test_assignment.nova  test_bitwise.nova  test_break_continue.nova  test_classes.nova  test_error_messages.nova  test_io.nova  test_lambda.nova  test_modules.nova  test_object_debug.nova  test_simple_import.nova  test_simple_lambda.nova  test_std_import.nova  test_std_library.nova  test_string_import.nova  test_try_catch.nova
