[workspace]
members = [
    "nova/compiler",
    "nova/runtime", 
    "nova/stdlib",
    "nova/tools",
    "nova/testing"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["tw4"]
license = "MIT"
repository = "https://github.com/tw4/nova-lang"
homepage = "https://nova-lang.org"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
criterion = "0.5"